k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapi
  namespace: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapi
  template:
    metadata:
      labels:
        app: myapi
    spec:
      containers:
        - name: myapi
          image: myapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: myapi
  namespace: myapp
spec:
  type: NodePort
  selector:
    app: myapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 32440
